--- a/src/styles/containers/facilityCard.scss
+++ b/src/styles/containers/facilityCard.scss
@@ -71,6 +71,14 @@
   display: none !important;
 }
 
+.fc-week-hours {
+  display: none !important;
+}
+
+.fc-facility-tags {
+  display: none !important;
+}
+
 @supports (-webkit-line-clamp: 2) {
   .fc-two-line-ellipsis {
     overflow: hidden;
@@ -148,6 +156,14 @@
       }
 
       .fc-toggle-map-btn-container {
+        display: block !important;
+      }
+
+      .fc-week-hours {
+        display: block !important;
+      }
+
+      .fc-facility-tags {
         display: block !important;
       }
 
